2006-01-01
	* Brad Fitzpatrick <brad@danga.com>:  allocate 1 slab per class
	on start-up, to avoid confusing users with out-of-memory errors
	later.  this is 18 MB of allocation on start, unless max memory
	allowed with -m is lower, in which case only the smaller slab
	classes are allocated.
	
2005-08-09
	* Elizabeth Mattijsen <liz@dijkmat.nl>: needed a way to flush all
	memcached backend servers, but not at exactly the same time (to
	reduce load peaks), I've added some simple functionality to the
	memcached protocol in the "flush_all" command that allows you to
	specify a time at which the flush will actually occur (instead of
	always at the moment the "flush_all" command is received).

2005-05-25
	* patch from Peter van Dijk <peter@nextgear.nl> to make
	  stderr unbuffered, for running under daemontools

2005-04-04
	* patch from Don MacAskill <don@smugmug.com> 'flush_all' doesn't
	seem to work properly.  Basically, if you try to add a key which
	is present, but expired, the store fails but the old key is no
	longer expired.

	* release 1.1.12

2005-01-14
	* Date: Thu, 18 Nov 2004 15:25:59 -0600
	  From: David Phillips <electrum@gmail.com>
	Here is a patch to configure.ac and Makefile.am to put the man page in
	the correct location.  Trying to install the man page from a
	subdirectory results in the subdirectory being used in the install
	path (it tries to install to doc/memcached.1).  This is the correct
	thing to  do:

	- create a Makefile.am in the doc directory that installs the man page
	  with man_MANS
	- modify Makefile.am in the base directory to reference the doc
  	  directory using SUBDIRS
	- modify the AC_CONFIG_FILES macro in configure.ac to output the 
	  Makefile in doc

	
2005-01-14
	* pidfile saving support from Lisa Seelye <lisa@gentoo.org>, sent
	  Jan 13, 2005

2005-01-14
	* don't delete libevent events that haven't been added (the deltimer)
	  patch from Ted Schundler <tschundler@gmail.com>

2004-12-10